mediapc: use older java APIs for backward compatibility
This change addresses the Jdk version incompatibility issue on devices running on Android T or older by reverting the usage of newer APIs like `.toList()`, `.formatted()`, and `.getFirst()` which caused the test exceptions.

Bug: 456431963
Test: atest CtsMediaPerformanceClassTestCases
FLAG: TEST_ONLY

Change-Id: Ica828b38d8b00c45fe3390bfc2d1cbd67c422808